--- a/client/src/components/LoginForm.css
+++ b/client/src/components/LoginForm.css
@@ -32,7 +32,7 @@
     justify-content: center;
     align-items: center;
     text-align: center;
-    background-color: #fff;
+    background-color: rgb(238, 219, 177);
     box-shadow: 0px 0px 19px 5px rgba(0,0,0,0.19);
 }
 .lefty{
